# lingbot-vla

./: README.md  pyproject.toml  requirements.txt  setup.py  train.sh
lingbot/models/vla/vision_models/morgbd_clean/3rd/MoRGBD/: README.md  infer_ant_trainsparent_metric.py  pyproject.toml  pyrightconfig.json  requirements.txt
lingbot/models/vla/vision_models/morgbd_clean/MoGe/: .gitignore  pyproject.toml  requirements.txt
lingbot/models/vla/vision_models/morgbd_clean/MoGe/baselines/: moge.py
lingbot/models/vla/vision_models/morgbd_clean/MoGe/configs/train/: v1.json  v1_megadepth.json  v1_scannetpp.json  v1_unW.json  v1_vitl16.json  v1_vitl16_224.json  v1_vitl16_lrstep0.json  v2_scannetpp.json  v2_scannetpp_cluster.json  v2_tartanair_cluster.json  v3_conv_depth_1c-cat.json  v3_conv_depth_1c-catFeat-fuse.json  v3_conv_depth_1c-cat_dymr.json  v3_conv_depth_1c-cat_maskratio00.json  v3_conv_depth_1c-cat_maskratio060.json  v3_conv_depth_1c-cat_maskratio060_imgmaskratio060.json  v3_conv_depth_mask_2c.json  v3_debug.json  v3_megadepth_cluster_conv_depth_1c-cat_maskratio060.json  v3_scannetpp_cluster.json  v3_scannetpp_cluster_convDepthMask2C.json  v3_scannetpp_cluster_conv_depth_1c-cat.json  v3_scannetpp_cluster_conv_depth_1c-catFeat-fuse.json  v3_scannetpp_cluster_conv_depth_1c-cat_dymr.json  v3_scannetpp_cluster_conv_depth_1c-cat_maskratio00.json  v3_scannetpp_cluster_conv_depth_1c-cat_maskratio060.json  v3_scannetpp_cluster_conv_depth_1c-cat_maskratio060_imgmaskratio060.json  v3_scannetpp_tartanair_cluster_conv_depth_1c-cat_dymr.json  v3_scannetpp_tartanair_cluster_conv_depth_1c-cat_maskratio060.json  v3_tartanair_cluster_conv_depth_1c-cat_maskratio060.json
lingbot/models/vla/vision_models/morgbd_clean/MoGe/docs/: eval.md
lingbot/models/vla/vision_models/morgbd_clean/utils/: pyproject.toml  setup.py
lingbot/models/vla/vision_models/morgbd_clean/utils/train_utils/: __init__.py  oss_manager.py
(+118 files in other folders)
