[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moge"
version = "2.0.0"
description = "MoGe: Unlocking Accurate Monocular Geometry Estimation for Open-Domain Images with Optimal Training Supervision"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch>=2.0.0",
    "torchvision",
    "gradio",
    #"3rd/utils3d"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/microsoft/MoGe"

[tool.setuptools.packages.find]
where = ["."]
include = ["moge*"]

[project.scripts]
moge = "moge.scripts.cli:main"