[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morgbd"
version = "2.0.0"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch>=2.0.0",
    "torchvision",
]
requires-python = ">=3.9"


[tool.setuptools.packages.find]
where = ["."]
include = ["morgbd*"]

[project.scripts]
moge = "moge.scripts.cli:main"